--- a/Tuan02_Chuong02_CSS/Bai02.html
+++ b/Tuan02_Chuong02_CSS/Bai02.html
@@ -9,8 +9,13 @@
 </head>
 
 <body>
-    <h1>Maxwell Scientific</h1>
-
+    <p style="text-indent: 1cm;color: red;">Thiết lập chế dộ thụt đầu dòng 1 đoạn văn bản</p>
+    <p style="text-align: right;color: blue;">Thuộc tính text-align:right; dùng để canh lề phải đoạn văn bản.</p>
+    <p style="text-align: center;color:green">Thuốc tính text-align:center dùng để canh giau74 lề đoạn văn bản</p>
+    <p style="text-align: left;color:brown">Thuộc tính text-align dùng để canh lề trái đoạn văn bản</p>
+    <p style="text-decoration: underline;color:LightCoral">Thuộc tính text-decoration underline; sẽ gạch dưới đoạn văn bản</p>
+    <p style="text-decoration: overline;color:red">Thuộc tính text-decoration:overline; sẽ gạch trên đoạn văn bản</p>
+    <p style="text-decoration: blink;text-shadow: 4px 4px 9px blue;color: blue;">Thuộc tính text-decoration:blink; tạo hiệu ứng blink cho đoạn văn bản</p>
 </body>
 
 </html>
