--- a/Code/CSSLayout.html
+++ b/Code/CSSLayout.html
@@ -88,7 +88,7 @@
 
     <header>
 
-        <img src="IMG\konosuba_anime_film_2018_image2.jpg" width="70%" align="right" height="150px" ;>
+        <img src="../IMG/konosuba_anime_film_2018_image2.jpg" width="70%" align="right" height="150px" ;>
     </header>
 
     <section>
